--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -495,7 +495,8 @@ html[xmlns] .slider-wrap {display: block;}
 .no-js .slider-wrap > .slide:first-child {display: block;}
 
 .flex-viewport {
-    max-height: 2000px;
+    /*max-height: 2000px;*/
+    max-height: 500px;
     -webkit-transition: all 1s ease;
     -o-transition: all 1s ease;
     transition: all 1s ease;
