--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,13 @@
 }
 
 
+.time {
+    font-size: 12px;
+    color: #999;
+}
+
+
+
 
 
 /*-----------------------------------------------------------------------------------
