--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2436,7 +2436,8 @@ body:not(.device-touch) #page-menu.dots-menu nav li .dots-menu-caption {
     width:100%;
     height:100%;
     margin: 0;
-    background: url('images/pattern2.png') repeat;
+    /*21/3/2015  Modify*/
+    /*background: url('images/pattern2.png') repeat;*/
 }
 
 .swiper_wrapper .swiper-slide {
