--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -2641,7 +2641,8 @@ body.side-push-panel.side-panel-open:not(.device-xxs):not(.device-xs):not(.devic
 	width:100%;
 	height:100%;
 	margin: 0;
-	background: url('images/pattern2.png') repeat;
+	/*21/3/2015 Modify*/
+	/*background: url('images/pattern2.png') repeat;*/
 }
 
 .swiper_wrapper .swiper-slide {
