--- a/public/assets/css/font-icons.css
+++ b/public/assets/css/font-icons.css
@@ -34,8 +34,7 @@
 [class^="icon-"], [class*=" icon-"],
 [class^="icon-line-"], [class*=" icon-line-"],
 [class^="icon-line2-"], [class*=" icon-line2-"],
-.side-header #primary-menu ul > li.sub-menu > a:after,
-#primary-menu ul ul > li.sub-menu > a:after {
+.side-header #primary-menu ul > li.sub-menu > a:after {
 	display: inline-block;
 	font-family: 'font-icons';
 	speak: none;
